[gd_scene load_steps=5 format=3 uid="uid://dbuxgumy46lbi"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_erbvp"]

[sub_resource type="Animation" id="Animation_txjju"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_v52tb"]
resource_name = "transition_in"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1760, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_70jrn"]
_data = {
"RESET": SubResource("Animation_txjju"),
"transition_in": SubResource("Animation_v52tb")
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_erbvp")

[node name="Label" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "(insert game title here)"
horizontal_alignment = 1

[node name="MenuButtons" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1117.0
offset_top = 798.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MenuButtons"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MenuButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
text = "Play"

[node name="SettingsButton" type="Button" parent="MenuButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="MenuButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../PlayButton")
text = "Exit
"

[node name="Transition" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1760.0
offset_right = -1760.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_70jrn")
}
